Update Color Wheel | Gemini 2.5 Output v0.6.html

--- a/Color Wheel | Gemini 2.5 Output v0.6.html
+++ b/Color Wheel | Gemini 2.5 Output v0.6.html
@@ -1065,6 +1065,7 @@
     { name: 'Louisiana Tech University', established: 1894, country: 'USA', control: 'Public', colors: ['#002F8B', '#E21B23'] },
     { name: 'Lourdes University', established: 1958, country: 'USA', control: 'Private', colors: ['#E2725B', '#000000'] },
     { name: 'Loyola Marymount University', established: 1911, country: 'USA', control: 'Private', colors: ['#8E0028', '#00345B'] },
+{ name: 'Mount Holyoke College', established: 1837, country: 'USA', control: 'Private', colors: ['#041E42', '#FFFFFF'] },
     { name: 'Loyola University Chicago', established: 1870, country: 'USA', control: 'Private', colors: ['#800000', '#FFCC00'] },
     { name: 'Loyola University Maryland', established: 1852, country: 'USA', control: 'Private', colors: ['#00694E', '#CACAC8'] },
     { name: 'Marist College', established: 1929, country: 'USA', control: 'Private', colors: ['#D11F3E', '#1A1919'] },
@@ -1372,6 +1373,86 @@
     { name: 'Wright State University', established: 1967, country: 'USA', control: 'Public', colors: ['#006F51', '#E7A614'] },
     { name: 'Xavier University', established: 1831, country: 'USA', control: 'Private', colors: ['#062252', '#FFFFFF'] },
     { name: 'Yale University', established: 1701, country: 'USA', control: 'Private', colors: ['#0E4C92', '#FFFFFF'] },
+
+    { name: 'University at Buffalo', established: 1846, country: 'USA', control: 'Public', colors: ['#005BBB', '#FFFFFF'] },
+    { name: 'SUNY Cortland', established: 1868, country: 'USA', control: 'Public', colors: ['#E41C24', '#000000'] },
+    { name: 'SUNY Geneseo', established: 1871, country: 'USA', control: 'Public', colors: ['#003F87', '#FFFFFF'] },
+    { name: 'SUNY Oneonta', established: 1889, country: 'USA', control: 'Public', colors: ['#E41C38', '#000000'] },
+    { name: 'SUNY Fredonia', established: 1826, country: 'USA', control: 'Public', colors: ['#0061AA', '#003366'] },
+    { name: 'SUNY New Paltz', established: 1828, country: 'USA', control: 'Public', colors: ['#1D438B', '#F47821'] },
+    { name: 'SUNY Plattsburgh', established: 1889, country: 'USA', control: 'Public', colors: ['#C8102E', '#000000'] },
+    { name: 'SUNY Potsdam', established: 1816, country: 'USA', control: 'Public', colors: ['#862633', '#FFC72C'] },
+    { name: 'SUNY Brockport', established: 1835, country: 'USA', control: 'Public', colors: ['#006747', '#FFD100'] },
+    { name: 'SUNY Oswego', established: 1861, country: 'USA', control: 'Public', colors: ['#1D5524', '#EDAE09'] },
+    { name: 'Purchase College', established: 1967, country: 'USA', control: 'Public', colors: ['#7D2165', '#000000'] },
+    { name: 'SUNY Old Westbury', established: 1965, country: 'USA', control: 'Public', colors: ['#0D3B18', '#FFFFFF'] },
+    { name: 'Buffalo State University', established: 1871, country: 'USA', control: 'Public', colors: ['#E87722', '#000000'] },
+    { name: 'SUNY Polytechnic Institute', established: 1966, country: 'USA', control: 'Public', colors: ['#18468B', '#EDAC09'] },
+    { name: 'SUNY Empire State University', established: 1971, country: 'USA', control: 'Public', colors: ['#00539B', '#FFFFFF'] },
+    { name: 'Fashion Institute of Technology', established: 1944, country: 'USA', control: 'Public', colors: ['#0055A7', '#FFFFFF'] },
+
+    { name: 'Baruch College', established: 1968, country: 'USA', control: 'Public', colors: ['#05336B'] },
+    { name: 'Brooklyn College', established: 1930, country: 'USA', control: 'Public', colors: ['#7F1734'] },
+    { name: 'College of Staten Island', established: 1976, country: 'USA', control: 'Public', colors: ['#0033A1'] },
+    { name: 'Hunter College', established: 1870, country: 'USA', control: 'Public', colors: ['#754C78'] },
+    { name: 'John Jay College of Criminal Justice', established: 1964, country: 'USA', control: 'Public', colors: ['#003A63', '#00AEEF'] },
+    { name: 'Lehman College', established: 1967, country: 'USA', control: 'Public', colors: ['#0061A0', '#84BD00'] },
+    { name: 'Medgar Evers College', established: 1970, country: 'USA', control: 'Public', colors: ['#231F20', '#FDD044'] },
+    { name: 'Queens College', established: 1937, country: 'USA', control: 'Public', colors: ['#E71939', '#6AADE4'] },
+    { name: 'York College', established: 1966, country: 'USA', control: 'Public', colors: ['#E4002B'] },
+
+// User-requested additions
+    { name: 'Skidmore College', established: 1903, country: 'USA', control: 'Private', colors: ['#006B3F', '#FFC72C'] },
+    { name: 'Dickinson College', established: 1783, country: 'USA', control: 'Private', colors: ['#CC0000', '#FFFFFF'] },
+    { name: 'University of North Carolina Asheville', established: 1927, country: 'USA', control: 'Public', colors: ['#00599C', '#FFFFFF'] },
+    { name: 'University of North Carolina Wilmington', established: 1947, country: 'USA', control: 'Public', colors: ['#00646E', '#002C54', '#FFC425'] },
+    { name: 'University of North Carolina at Charlotte', established: 1946, country: 'USA', control: 'Public', colors: ['#005035', '#FFFFFF', '#A38A56'] },
+    { name: 'University of North Carolina at Greensboro', established: 1891, country: 'USA', control: 'Public', colors: ['#FFB300', '#003366', '#FFFFFF'] },
+
+    // Additions from "45 Schools That Change Lives" list
+    { name: 'Agnes Scott College', established: 1889, country: 'USA', control: 'Private', colors: ['#5A3B8A', '#FFFFFF'] },
+    { name: 'Allegheny College', established: 1815, country: 'USA', control: 'Private', colors: ['#003865', '#E8A023'] },
+    { name: 'Antioch College', established: 1850, country: 'USA', control: 'Private', colors: ['#E41B23', '#000000'] },
+    { name: 'Austin College', established: 1849, country: 'USA', control: 'Private', colors: ['#A51931', '#F2A800'] },
+    { name: 'Bard College', established: 1860, country: 'USA', control: 'Private', colors: ['#BF202F', '#FFFFFF'] },
+    { name: 'Beloit College', established: 1846, country: 'USA', control: 'Private', colors: ['#005596', '#FDB813'] },
+    { name: 'Centre College', established: 1819, country: 'USA', control: 'Private', colors: ['#C8B273', '#FFFFFF'] },
+    { name: 'Clark University', established: 1887, country: 'USA', control: 'Private', colors: ['#BE1E2D', '#FFFFFF'] },
+    { name: 'Cornell College', established: 1853, country: 'USA', control: 'Private', colors: ['#4F2D7F', '#FFFFFF'] },
+    { name: 'Denison University', established: 1831, country: 'USA', control: 'Private', colors: ['#DD1338', '#FFFFFF'] },
+    { name: 'DePauw University', established: 1837, country: 'USA', control: 'Private', colors: ['#B7A260', '#000000'] },
+    { name: 'Earlham College', established: 1847, country: 'USA', control: 'Private', colors: ['#822433', '#FFFFFF'] },
+    { name: 'Eckerd College', established: 1958, country: 'USA', control: 'Private', colors: ['#00586A', '#000000', '#002444'] },
+    { name: 'Emory & Henry College', established: 1836, country: 'USA', control: 'Private', colors: ['#005695', '#F2C00E'] },
+    { name: 'The Evergreen State College', established: 1967, country: 'USA', control: 'Public', colors: ['#004E35', '#FFFFFF'] },
+    { name: 'Goucher College', established: 1885, country: 'USA', control: 'Private', colors: ['#003865', '#F2A900'] },
+    { name: 'Guilford College', established: 1837, country: 'USA', control: 'Private', colors: ['#8F0D15', '#6F7271'] },
+    { name: 'Hampshire College', established: 1965, country: 'USA', control: 'Private', colors: ['#522398', '#63666A'] },
+    { name: 'Hendrix College', established: 1876, country: 'USA', control: 'Private', colors: ['#F76F04', '#000000'] },
+    { name: 'Hillsdale College', established: 1844, country: 'USA', control: 'Private', colors: ['#002F5B', '#FFFFFF'] },
+    { name: 'Hiram College', established: 1850, country: 'USA', control: 'Private', colors: ['#0074C8', '#E32526'] },
+    { name: 'Hope College', established: 1866, country: 'USA', control: 'Private', colors: ['#004C97', '#F47A2E'] },
+    { name: 'Juniata College', established: 1876, country: 'USA', control: 'Private', colors: ['#004A7F', '#D6B573'] },
+    { name: 'Kalamazoo College', established: 1833, country: 'USA', control: 'Private', colors: ['#FC6400', '#000000'] },
+    { name: 'Knox College', established: 1837, country: 'USA', control: 'Private', colors: ['#4D1F7C', '#E9A500'] },
+    { name: 'Lawrence University', established: 1847, country: 'USA', control: 'Private', colors: ['#003A70', '#FFFFFF'] },
+    { name: 'McDaniel College', established: 1867, country: 'USA', control: 'Private', colors: ['#006B3F', '#FFC22E'] },
+    { name: 'Millsaps College', established: 1890, country: 'USA', control: 'Private', colors: ['#3B2A6B', '#FFFFFF'] },
+    { name: 'New College of Florida', established: 1960, country: 'USA', control: 'Public', colors: ['#005A93', '#FFFFFF'] },
+    { name: 'Oberlin College', established: 1833, country: 'USA', control: 'Private', colors: ['#A51931', '#F2A900'] },
+    { name: 'Ohio Wesleyan University', established: 1842, country: 'USA', control: 'Private', colors: ['#CC203B', '#000000'] },
+    { name: 'Reed College', established: 1908, country: 'USA', control: 'Private', colors: ['#9F1D2F', '#D0D0D0'] },
+    { name: 'Rhodes College', established: 1848, country: 'USA', control: 'Private', colors: ['#C31F46', '#000000'] },
+    { name: 'Southwestern University', established: 1840, country: 'USA', control: 'Private', colors: ['#000000', '#FFC72C'] },
+    { name: 'St. John\'s College', established: 1696, country: 'USA', control: 'Private', colors: ['#000000', '#F36F21'] },
+    { name: 'St. Olaf College', established: 1874, country: 'USA', control: 'Private', colors: ['#000000', '#E7A914'] },
+    { name: 'University of Lynchburg', established: 1903, country: 'USA', control: 'Private', colors: ['#CD122D', '#A2AAAD'] },
+    { name: 'University of Puget Sound', established: 1888, country: 'USA', control: 'Private', colors: ['#6A0E32', '#FFFFFF'] },
+    { name: 'Ursinus College', established: 1869, country: 'USA', control: 'Private', colors: ['#C41230', '#C8B88A', '#000000'] },
+    { name: 'Wabash College', established: 1832, country: 'USA', control: 'Private', colors: ['#E41B23', '#FFFFFF'] },
+    { name: 'Wheaton College (Illinois)', established: 1860, country: 'USA', control: 'Private', colors: ['#003DA7', '#F36F21'] },
+    { name: 'Willamette University', established: 1842, country: 'USA', control: 'Private', colors: ['#92012D', '#B79A6D'] },
+    { name: 'College of Wooster', established: 1866, country: 'USA', control: 'Private', colors: ['#000000', '#C99F13'] },
     { name: 'Youngstown State University', established: 1908, country: 'USA', control: 'Public', colors: ['#B62125', '#FFFFFF'] },
 ];
 
