Update Color Wheel | Gemini 2.5 Output v0.6.html

--- a/Color Wheel | Gemini 2.5 Output v0.6.html
+++ b/Color Wheel | Gemini 2.5 Output v0.6.html
@@ -1415,6 +1415,7 @@
     { name: 'Antioch College', established: 1850, country: 'USA', control: 'Private', colors: ['#E41B23', '#000000'] },
     { name: 'Austin College', established: 1849, country: 'USA', control: 'Private', colors: ['#A51931', '#F2A800'] },
     { name: 'Bard College', established: 1860, country: 'USA', control: 'Private', colors: ['#BF202F', '#FFFFFF'] },
+{ name: 'Barnard College', established: 1889, country: 'USA', control: 'Private', colors: ['#0038A8', '#FFFFFF'] },
     { name: 'Beloit College', established: 1846, country: 'USA', control: 'Private', colors: ['#005596', '#FDB813'] },
     { name: 'Centre College', established: 1819, country: 'USA', control: 'Private', colors: ['#C8B273', '#FFFFFF'] },
     { name: 'Clark University', established: 1887, country: 'USA', control: 'Private', colors: ['#BE1E2D', '#FFFFFF'] },
