Update Color Wheel | Gemini 2.5 Output v0.6.html

--- a/Color Wheel | Gemini 2.5 Output v0.6.html
+++ b/Color Wheel | Gemini 2.5 Output v0.6.html
@@ -1292,7 +1292,7 @@
     { name: 'University of New Mexico', established: 1889, country: 'USA', control: 'Public', colors: ['#C10037', '#5E5D60'] },
     { name: 'University of New Orleans', established: 1958, country: 'USA', control: 'Public', colors: ['#005DA6', '#A3A9AD'] },
     { name: 'University of North Alabama', established: 1830, country: 'USA', control: 'Public', colors: ['#46166B', '#DB9F11'] },
-    { name: 'University of North Carolina at Chapel Hill', established: 1789, country: 'USA', control: 'Public', colors: ['#7BAFD4', '#002654'] },
+    { name: 'University of North Carolina at Chapel Hill', established: 1789, country: 'USA', control: 'Public', colors: ['#7BAFD4', '#002654', '#151515', '#FFFFFF'] },
     { name: 'University of North Dakota', established: 1883, country: 'USA', control: 'Public', colors: ['#009A44', '#000000'] },
     { name: 'University of North Florida', established: 1969, country: 'USA', control: 'Public', colors: ['#00246B', '#D9D9D9'] },
     { name: 'University of North Texas', established: 1890, country: 'USA', control: 'Public', colors: ['#00853E', '#FFFFFF'] },
