Update Color Wheel | Gemini 2.5 Output v0.6.html

--- a/Color Wheel | Gemini 2.5 Output v0.6.html
+++ b/Color Wheel | Gemini 2.5 Output v0.6.html
@@ -959,7 +959,7 @@
     { name: 'Colorado School of Mines', established: 1874, country: 'USA', control: 'Public', colors: ['#003E74', '#B3B3B3'] },
     { name: 'Colorado State University', established: 1870, country: 'USA', control: 'Public', colors: ['#2C5335', '#CAB977'] },
     { name: 'Columbia University', established: 1754, country: 'USA', control: 'Private', colors: ['#75B2DD', '#FFFFFF'] },
-    { name: 'Cornell University', established: 1865, country: 'USA', control: 'Private', colors: ['#B31B1B', '#222222', '##FFFFFF'] },
+    { name: 'Cornell University', established: 1865, country: 'USA', control: 'Private', colors: ['#B31B1B', '#222222', '#FFFFFF'] },
     { name: 'Dartmouth College', established: 1769, country: 'USA', control: 'Private', colors: ['#00693E', '#FFFFFF'] },
     { name: 'Davidson College', established: 1837, country: 'USA', control: 'Private', colors: ['#000000', '#AC1A2F'] },
     { name: 'Delaware State University', established: 1891, country: 'USA', control: 'Public', colors: ['#E32636', '#9BDDFF'] },
