Update Color Wheel | Gemini 2.5 Output v0.6.html

--- a/Color Wheel | Gemini 2.5 Output v0.6.html
+++ b/Color Wheel | Gemini 2.5 Output v0.6.html
@@ -1310,7 +1310,7 @@
     { name: 'University of Rochester', established: 1850, country: 'USA', control: 'Private', colors: ['#FFD100', '#4E7BBE'] },
     { name: 'University of San Diego', established: 1949, country: 'USA', control: 'Private', colors: ['#002654', '#97CAFF'] },
     { name: 'University of San Francisco', established: 1855, country: 'USA', control: 'Private', colors: ['#00543C', '#FDBB30'] },
-    { name: 'University of South Alabama', established: 1963, country: 'USA', control: 'Public', colors: ['#000066', '#FF0000'] },
+    { name: 'University of South Alabama', established: 1963, country: 'USA', control: 'Public', colors: ['#000066', '#FF0000', '#FFFFFF'] },
     { name: 'University of South Carolina', established: 1801, country: 'USA', control: 'Public', colors: ['#73000A', '#000000'] },
     { name: 'University of South Carolina Upstate', established: 1967, country: 'USA', control: 'Public', colors: ['#006B3F', '#000000'] },
     { name: 'University of South Dakota', established: 1862, country: 'USA', control: 'Public', colors: ['#AD0000', '#000000'] },
