--- a/index.html
+++ b/index.html
@@ -496,6 +496,121 @@
                            </ul>
                        </div>
 
+
+
+
+
+
+
+
+<div class="text-lg space-y-10">
+    <div>
+        <h2 class="text-3xl font-vt323 text-green-400 mb-4">[[ Key Findings &amp; Analysis ]]</h2>
+
+        <div class="mt-6 p-4 border border-cyan-400 rounded-lg bg-black bg-opacity-20">
+            <h3 class="text-2xl font-vt323 text-teal-300 mb-3">&gt;&gt; The Great Color Census: The Primacy of Red and Blue</h3>
+            <p class="mb-4">
+                A rigorous, ground-up analysis of all <strong class="text-yellow-300">5,122 colors</strong> in the database confirms a definitive color hierarchy. The initial hypothesis holds true: two primary colors are overwhelmingly dominant in all forms of visual communication.
+            </p>
+            <ul class="list-none space-y-2 mb-4 pl-0">
+                <li><strong class="text-red-400">🔴 Red</strong>: 1,400 instances (<strong class="text-yellow-300">27.3%</strong>)</li>
+                <li><strong class="text-blue-400">🔵 Blue</strong>: 1,051 instances (<strong class="text-yellow-300">20.5%</strong>)</li>
+                <li><strong class="text-gray-400">⚪ Greyscale</strong>: 1,005 instances (<strong class="text-yellow-300">19.6%</strong>)</li>
+                <li><strong class="text-yellow-300">🟡 Yellow</strong>: 631 instances (<strong class="text-yellow-300">12.3%</strong>)</li>
+                <li><strong class="text-green-400">🟢 Green</strong>: 481 instances (<strong class="text-yellow-300">9.4%</strong>)</li>
+                <li><strong class="text-orange-400">🟠 Orange</strong>: 362 instances (<strong class="text-yellow-300">7.1%</strong>)</li>
+                <li><strong class="text-purple-400">🟣 Purple</strong>: 192 instances (<strong class="text-yellow-300">3.7%</strong>)</li>
+            </ul>
+            <p class="mt-4">
+                The dominance of <strong class="text-red-400">Red</strong> (Action, Passion, Urgency) and <strong class="text-blue-400">Blue</strong> (Trust, Stability, Authority) is a recurring theme. Their fundamental psychological power drives their widespread use across every category.
+            </p>
+        </div>
+        
+        <div class="mt-6 p-4 border border-cyan-400 rounded-lg bg-black bg-opacity-20">
+            <h3 class="text-2xl font-vt323 text-teal-300 mb-3">&gt;&gt; Trend 1: The Code of Flags</h3>
+            <h4 class="text-xl font-vt323 text-yellow-300">The Rule of Tincture</h4>
+            <p class="mb-4">
+                Flag design follows the ancient heraldic principle of <strong class="text-yellow-300">tincture</strong>, which demands high contrast for recognition at a distance. <strong class="text-red-400">Red</strong> appears in 75% of national flags, <strong class="text-white">White</strong> in 78%, and <strong class="text-blue-400">Blue</strong> in 53%.
+            </p>
+            <div class="my-4 p-3 bg-black border border-green-500 rounded-md text-center">
+                <p class="font-mono text-green-300 text-sm">CIELAB Contrast Formula: ΔE*<sub class="align-baseline">ab</sub> = √[(L*<sub>2</sub> - L*<sub>1</sub>)<sup>2</sup> + (a*<sub>2</sub> - a*<sub>1</sub>)<sup>2</sup> + (b*<sub>2</sub> - b*<sub>1</sub>)<sup>2</sup>]</p>
+            </div>
+            <h4 class="text-xl font-vt323 text-yellow-300 mt-6">The "Seal on a Bluesheet" Epidemic</h4>
+            <p class="mb-4">
+                While world flags often favor simple graphics, a full <strong class="text-yellow-300">50%</strong> (25 of 50) of U.S. state flags consist of the state seal on a solid blue background—a design vexillologists often criticize as indistinct.
+            </p>
+            <h4 class="text-xl font-vt323 text-yellow-300 mt-6">The Rarity of Royalty</h4>
+            <p class="mb-4">
+                Across the 966 colors in the combined flag datasets, only a <strong class="text-yellow-300">single color</strong>—<strong class="text-purple-400">#981E97</strong> on the flag of Dominica—is <strong class="text-purple-400">purple</strong> (<strong class="text-yellow-300">&lt;0.2%</strong>). This rarity is a direct result of economics; for millennia, the only rich purple dye (<strong class="text-yellow-300">Tyrian Purple</strong>) was astronomically expensive, making it the exclusive color of emperors. For new republics representing the people, using the ultimate color of monarchy was a symbolic contradiction.
+            </p>
+            <p class="mb-4">
+                However, the invention of synthetic dye in 1856 democratized the color, giving it new life. In stark contrast to flags, <strong class="text-purple-400">purple</strong> is now used extensively to convey creativity, wisdom, and luxury:
+            </p>
+            <ul class="list-disc list-inside space-y-2 mt-4">
+                <li><strong class="text-cyan-300">Brands:</strong> <strong class="text-yellow-300">12.4%</strong> of all brand colors are <strong class="text-purple-400">purple</strong>, making it over <strong class="text-yellow-300">60 times</strong> more common than in flags. It's a modern favorite for conveying innovation and premium quality.</li>
+                <li><strong class="text-cyan-300">Universities:</strong> <strong class="text-yellow-300">10.3%</strong> of university colors are <strong class="text-purple-400">purple</strong>, frequently used to represent wisdom, dignity, and academic distinction (e.g., NYU, Williams College).</li>
+                <li><strong class="text-cyan-300">Sports:</strong> <strong class="text-yellow-300">5.9%</strong> of sports colors are <strong class="text-purple-400">purple</strong>. Less common than the primary colors, it offers a unique and powerful identity for teams like the Vikings and Lakers.</li>
+            </ul>
+        </div>
+
+        <div class="mt-6 p-4 border border-cyan-400 rounded-lg bg-black bg-opacity-20">
+            <h3 class="text-2xl font-vt323 text-teal-300 mb-3">&gt;&gt; Trend 2: The Dichotomy of Corporate Color</h3>
+            <h4 class="text-xl font-vt323 text-yellow-300">Blue for Trust, Red for Action</h4>
+            <ul class="list-disc list-inside space-y-2 mt-4">
+                <li><strong class="text-cyan-300">Tech & Finance:</strong> These industries overwhelmingly favor <strong class="text-blue-400">blue</strong>. It appears in the palettes of 66% of "Software & IT" companies and 53% of "Financial Services" companies to project security.</li>
+                <li><strong class="text-cyan-300">Food & Entertainment:</strong> These sectors lean on <strong class="text-red-400">red</strong>. It's found in 61% of "Food & Hospitality" brands and 65% of "Media & Entertainment" brands to stimulate appetite and excitement.</li>
+            </ul>
+            <h4 class="text-xl font-vt323 text-yellow-300 mt-6">The Simplicity of the Digital Age</h4>
+            <p class="mb-4">
+                Brands established before 1995 have an average palette size of <strong class="text-yellow-300">3.4 colors</strong>. Brands from after 1995 average just <strong class="text-yellow-300">2.8 colors</strong>, a clear trend towards minimalism for better recognition on small screens.
+            </p>
+        </div>
+
+        <div class="mt-6 p-4 border border-cyan-400 rounded-lg bg-black bg-opacity-20">
+            <h3 class="text-2xl font-vt323 text-teal-300 mb-3">&gt;&gt; Trend 3: The Colors of Competition & Academia</h3>
+             <h4 class="text-xl font-vt323 text-yellow-300">Sports: High Energy, High Contrast</h4>
+            <ul class="list-disc list-inside space-y-2 mt-4">
+                <li><strong class="text-cyan-300">High Saturation:</strong> The average color saturation for sports teams is a vibrant <strong class="text-yellow-300">73%</strong>, far higher than the more subdued <strong class="text-yellow-300">52%</strong> for universities.</li>
+                <li><strong class="text-cyan-300">Power Colors:</strong> Across all sports, <strong class="text-red-400">Red</strong> and/or <strong class="text-gray-300">Black</strong> are present in a remarkable <strong class="text-yellow-300">66%</strong> of team branding to convey dominance.</li>
+            </ul>
+            <h4 class="text-xl font-vt323 text-yellow-300 mt-6">Universities: The Weight of Tradition</h4>
+            <p class="mb-4">
+                Universities use a higher proportion of very dark, traditional colors. <strong class="text-yellow-300">23%</strong> of all university colors are dark (lightness < 35%), compared to only <strong class="text-yellow-300">19%</strong> for sports teams, conveying seriousness and intellectual rigor.
+            </p>
+        </div>
+        
+        <div class="mt-6 p-4 border border-cyan-400 rounded-lg bg-black bg-opacity-20">
+            <h3 class="text-2xl font-vt323 text-teal-300 mb-3">&gt;&gt; Trend 4: The Brand Axis and Its Echoes</h3>
+            <p class="mb-4">
+                In branding, colors are intentionally concentrated along the complementary <strong class="text-blue-400">Blue</strong>-<strong class="text-orange-400">Orange/Red</strong> axis for psychological effect. A full <strong class="text-yellow-300">49%</strong> of all brand colors fall on this axis. When this math is applied to other categories, a story of intent vs. coincidence emerges:
+            </p>
+            <ul class="list-disc list-inside space-y-2 mt-4">
+                <li><strong class="text-cyan-300">Flags (51%):</strong> An even <strong class="text-yellow-300">stronger</strong> concentration. This is a historical coincidence, as the axis perfectly captures the two most fundamental colors of heraldry—heraldic <strong class="text-red-400">Red</strong> and <strong class="text-blue-400">Blue</strong>.</li>
+                <li><strong class="text-cyan-300">Sports (44%):</strong> A strong but lower concentration. Teams use <strong class="text-red-400">Red</strong> and <strong class="text-blue-400">Blue</strong> heavily, but pair them with other colors, weakening the specific axis.</li>
+                <li><strong class="text-cyan-300">Universities (35%):</strong> A much weaker axis, relying on a wider range of traditional colors like deep <strong class="text-green-400">greens</strong> and <strong class="text-gray-400">greys</strong>.</li>
+                <li><strong class="text-cyan-300">Transit (34%):</strong> The lowest concentration. Color is purely for <strong class="text-yellow-300">differentiation</strong> (e.g., Red Line, Green Line), so colors are intentionally spread across the wheel.</li>
+            </ul>
+        </div>
+
+        <div class="mt-6 p-4 border border-cyan-400 rounded-lg bg-black bg-opacity-20">
+            <h3 class="text-2xl font-vt323 text-teal-300 mb-3">&gt;&gt; Trend 5: The Saturation Spectrum</h3>
+            <p class="mb-4">By calculating the average <strong class="text-yellow-300">Saturation</strong> of all colors within each dataset, we can create a clear "energy spectrum" that reveals the core purpose of each category. Saturation, or color intensity, is a direct measure of the intent to grab attention. From most to least intense:</p>
+            <ol class="list-decimal list-inside space-y-2 mt-4">
+                <li><strong class="text-cyan-300">Transit (77%):</strong> Highest. Colors must be unambiguous for <strong class="text-yellow-300">wayfinding</strong>.</li>
+                <li><strong class="text-cyan-300">Sports (73%):</strong> High. Colors are for visibility and passionate <strong class="text-yellow-300">competition</strong>.</li>
+                <li><strong class="text-cyan-300">World Flags (68%):</strong> High. Colors must be bold for national <strong class="text-yellow-300">identity</strong>.</li>
+                <li><strong class="text-cyan-300">Brands (65%):</strong> Upper-middle. Vibrant colors are used for <strong class="text-yellow-300">persuasion</strong> but often tempered with neutrals.</li>
+                <li><strong class="text-cyan-300">U.S. Flags (61%):</strong> Lower than world flags due to complex, less-saturated seals.</li>
+                <li><strong class="text-cyan-300">Universities (52%):</strong> Lowest. Muted colors signal <strong class="text-yellow-300">tradition</strong> and prestige over grabbing attention.</li>
+            </ol>
+        </div>
+
+    </div>
+</div>
+
+
+
+
 <div>
     <h2 class="text-3xl font-vt323 text-green-400 mb-4 mt-10">[[ Special Thanks!! ]]</h2>
     <p class="mb-6">
