Update Color Wheel | Gemini 2.5 Output v0.6.html

--- a/Color Wheel | Gemini 2.5 Output v0.6.html
+++ b/Color Wheel | Gemini 2.5 Output v0.6.html
@@ -1947,7 +1947,7 @@ const sportsData = [
   { name: 'Czechia', colors: ['#11457E', '#FFFFFF', '#D7141A'], continent: 'Europe', established: 1993, recognition: 'UN-Recognized' },
   { name: 'Denmark', colors: ['#C60C30', '#FFFFFF'], continent: 'Europe', established: 965, recognition: 'UN-Recognized' },
   { name: 'Djibouti', colors: ['#6AB2E7', '#FFFFFF', '#00A95C', '#D7141A'], continent: 'Africa', established: 1977, recognition: 'UN-Recognized' },
-  { name: 'Dominica', colors: ['#006B3F', '#FCD116', '#FFFFFF', '#CE1126', '#000000'], continent: 'North America', established: 1978, recognition: 'UN-Recognized' },
+  { name: 'Dominica', colors: ['#009A44', '#FFCD00', '#FFFFFF', '#E4002B', '#000000', '#981E97'], continent: 'North America', established: 1978, recognition: 'UN-Recognized' },
   { name: 'Dominican Republic', colors: ['#002D62', '#FFFFFF', '#D21034'], continent: 'North America', established: 1844, recognition: 'UN-Recognized' },
   { name: 'Ecuador', colors: ['#FFD100', '#0068A3', '#ED2939'], continent: 'South America', established: 1830, recognition: 'UN-Recognized' },
   { name: 'Egypt', colors: ['#CE1126', '#FFFFFF', '#000000', '#FFD700'], continent: 'Africa', established: 1953, recognition: 'UN-Recognized' },
