--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
                               <div class="grid md:grid-cols-2 gap-6 items-center">
                                 <div>
                                     <h4 class="text-xl font-vt323 text-yellow-300">3D Surface</h4>
-                                    <p><strong>In a nutshell:</strong> A landscape of harmony from chords (a combination of three or more notes/frequencies). The deep blue "canyons" are stable chords like Major and Minor. Notice how most <strong>labeled dots</strong> (chords) typically correspond to different valleys. </p>
+                                    <p><strong>In a nutshell:</strong> A landscape of harmony from chords (a combination of three notes/frequencies). The deep blue "canyons" are stable chords like Major and Minor. Notice how most <strong>labeled dots</strong> (chords) typically correspond to different valleys. </p>
                                 </div>
                                 <img src="3d-surface.jpg" alt="3D Surface Chart Screenshot" class="border border-teal-500 rounded">
                             </div>
