--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
             </div>
             <h4 class="text-xl font-vt323 text-yellow-300 mt-6">The Rarity of Royalty</h4>
             <p class="mb-4">
-                Across the 966 colors in the combined flag datasets, only a <strong class="text-yellow-300">single color</strong>—<strong class="text-purple-400">#981E97</strong> on the flag of Dominica—is <strong class="text-purple-400">purple</strong> (<strong class="text-yellow-300">&lt;0.2%</strong>). This rarity is a direct result of economics; for millennia, the only rich purple dye (<strong class="text-yellow-300">Tyrian Purple</strong>) was astronomically expensive, making it the exclusive color of emperors. For new republics representing the people, using the ultimate color of monarchy was a symbolic contradiction.
+                Across the 966 colors in the combined flag datasets, only a <strong class="text-yellow-300">single color</strong> on the flag of Dominica is <strong class="text-purple-400">purple</strong> (<strong class="text-yellow-300">&lt;0.2%</strong>). This rarity is a direct result of economics; for millennia, the only rich purple dye (<strong class="text-purple-400">Tyrian Purple</strong>) was astronomically expensive, making it the exclusive color of emperors. For new republics representing the people, using the ultimate color of monarchy was a symbolic contradiction.
             </p>
             <p class="mb-4">
                 However, the invention of synthetic dye in 1856 democratized the color, giving it new life. In stark contrast to flags, <strong class="text-purple-400">purple</strong> is now used extensively to convey creativity, wisdom, and luxury:
