--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
         <div class="mt-6 p-4 border border-cyan-400 rounded-lg bg-black bg-opacity-20">
             <h3 class="text-2xl font-vt323 text-teal-300 mb-3">&gt;&gt; Trend 4: The Brand Axis and Its Echoes</h3>
             <p class="mb-4">
-                In branding, colors are intentionally concentrated along the complementary <strong class="text-blue-400">Blue</strong>-<strong class="text-orange-400">Orange/Red</strong> axis for psychological effect. A full <strong class="text-yellow-300">49%</strong> of all brand colors fall on this axis. When this math is applied to other categories, a story of intent vs. coincidence emerges:
+                In branding, colors are intentionally concentrated along the complementary <strong class="text-blue-400">Blue</strong>-<strong class="text-orange-400">Orange</strong>/<strong class="text-red-400">Red</strong> axis for psychological effect. A full <strong class="text-yellow-300">49%</strong> of all brand colors fall on this axis. When this math is applied to other categories, a story of intent vs. coincidence emerges:
             </p>
             <ul class="list-disc list-inside space-y-2 mt-4">
                 <li><strong class="text-cyan-300">Flags (51%):</strong> An even <strong class="text-yellow-300">stronger</strong> concentration. This is a historical coincidence, as the axis perfectly captures the two most fundamental colors of heraldry—heraldic <strong class="text-red-400">Red</strong> and <strong class="text-blue-400">Blue</strong>.</li>
