--- a/index.html
+++ b/index.html
@@ -536,17 +536,18 @@
                 <p class="font-mono text-green-300 text-sm">CIELAB Contrast Formula: ΔE*<sub class="align-baseline">ab</sub> = √[(L*<sub>2</sub> - L*<sub>1</sub>)<sup>2</sup> + (a*<sub>2</sub> - a*<sub>1</sub>)<sup>2</sup> + (b*<sub>2</sub> - b*<sub>1</sub>)<sup>2</sup>]</p>
             </div>
             <h4 class="text-xl font-vt323 text-yellow-300 mt-6">The Rarity of Royalty</h4>
-            <p class="mb-4">
-                Across the 966 colors in the combined flag datasets, only a <strong class="text-yellow-300">single color</strong> on the flag of Dominica is <strong class="text-purple-400">purple</strong> (<strong class="text-yellow-300">&lt;0.2%</strong>). This rarity is a direct result of economics; for millennia, the only rich purple dye (<strong class="text-purple-400">Tyrian Purple</strong>) was astronomically expensive, making it the exclusive color of emperors. For new republics representing the people, using the ultimate color of monarchy was a symbolic contradiction.
-            </p>
-            <p class="mb-4">
-                However, the invention of synthetic dye in 1856 democratized the color, giving it new life. In stark contrast to flags, <strong class="text-purple-400">purple</strong> is now used extensively to convey creativity, wisdom, and luxury:
-            </p>
-            <ul class="list-disc list-inside space-y-2 mt-4">
-                <li><strong class="text-cyan-300">Brands:</strong> <strong class="text-yellow-300">12.4%</strong> of all brand colors are <strong class="text-purple-400">purple</strong>, making it over <strong class="text-yellow-300">60 times</strong> more common than in flags. It's a modern favorite for conveying innovation and premium quality.</li>
-                <li><strong class="text-cyan-300">Universities:</strong> <strong class="text-yellow-300">10.3%</strong> of university colors are <strong class="text-purple-400">purple</strong>, frequently used to represent wisdom, dignity, and academic distinction (e.g., NYU, Williams College).</li>
-                <li><strong class="text-cyan-300">Sports:</strong> <strong class="text-yellow-300">5.9%</strong> of sports colors are <strong class="text-purple-400">purple</strong>. Less common than the primary colors, it offers a unique and powerful identity for teams like the Vikings and Lakers.</li>
-            </ul>
+<p class="mb-4">
+    Across the 966 colors in the combined flag datasets, only a <strong class="text-yellow-300">single color</strong>—<strong class="text-purple-400">#981E97</strong> on the flag of Dominica—is <strong class="text-purple-400">purple</strong> (<strong class="text-yellow-300">&lt;0.2%</strong>). This rarity is a direct result of economics; for millennia, the only rich purple dye (<strong class="text-yellow-300">Tyrian Purple</strong>) was astronomically expensive, making it the exclusive color of emperors. For new republics representing the people, using the ultimate color of monarchy was a symbolic contradiction.
+</p>
+<p class="mb-4">
+    However, the invention of synthetic dye in 1856 democratized the color, giving it new life. In stark contrast to flags, <strong class="text-purple-400">purple</strong> is now used extensively to convey creativity, wisdom, and luxury:
+</p>
+<ul class="list-disc list-inside space-y-2 mt-4">
+    <li><strong class="text-cyan-300">Brands:</strong> <strong class="text-yellow-300">12.4%</strong> of all brand colors are <strong class="text-purple-400">purple</strong>, making it over <strong class="text-yellow-300">60 times</strong> more common than in flags. It's a modern favorite for conveying innovation and premium quality.</li>
+    <li><strong class="text-cyan-300">Universities:</strong> <strong class="text-yellow-300">10.3%</strong> of university colors are <strong class="text-purple-400">purple</strong>, frequently used to represent wisdom, dignity, and academic distinction (e.g., NYU, Williams College).</li>
+    <li><strong class="text-cyan-300">Sports:</strong> <strong class="text-yellow-300">5.9%</strong> of sports colors are <strong class="text-purple-400">purple</strong>. Less common than the primary colors, it offers a unique and powerful identity for teams like the Vikings and Lakers.</li>
+    <li><strong class="text-cyan-300">Transit:</strong> <strong class="text-yellow-300">4.7%</strong> of transit colors are <strong class="text-purple-400">purple</strong>, used functionally as a distinct, high-visibility color for <strong class="text-yellow-300">wayfinding</strong> on specific lines (e.g., London's Elizabeth Line, LA's D Line).</li>
+</ul>
         </div>
 
         <div class="mt-6 p-4 border border-cyan-400 rounded-lg bg-black bg-opacity-20">
